@@ -1,5 +1,10 @@
 2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>
 
+	* TorrentCreator.cs: When creating a singlefile torrent, correctly
+	generate the Torrent.Path property.
+
+2008-10-26  Alan McGovern  <alan.mcgovern@gmail.com>
+
 	* TorrentFile.cs: Print out the full path, not just the filename
 
 2008-05-31  Alan McGovern <alan.mcgovern@gmail.com> 
